--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,100 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body{
+  background-image: url("../img/natural-default-pattern.png");
+}
+
+.container{
+  width: 85%;
+  height: 95vh;
+  margin: auto;
+  margin-top: 20px;
+  position: relative;
+}
+
+.container::after{
+  content: "";
+  display: table;
+  clear: both;
+}
+
+header{
+  width: 100%;
+  height: 30%;
+  background: yellow;
+}
+
+nav{
+  width: 100%;
+  height: 40px;
+  background: #504741;
+  text-align: center;
+  padding: 10px;
+  border: 1px solid rgba(0,0,0,.25);
+}
+
+.menu{
+  display: inline-block;
+  color: white;
+  text-transform: uppercase;
+  padding: 5px;
+  border-right: 1px solid rgba(0,0,0,.25);
+}
+
+#contact{
+  border-right: none;
+}
+
+main{
+  margin-top: 10px;
+}
+
+.left,.top{
+  float:left;
+}
+
+.right{
+  float:right;
+}
+
+.row-l{
+  width: 20%;
+  padding: 20px;
+  background: blue;
+}
+
+.link{
+  padding: 20px;
+}
+
+.row-c{
+  width: 60%;
+  background: red;
+}
+
+.col-c{
+  padding: 20px;
+}
+
+.row-r{
+  width: 20%;
+  background: green;
+}
+
+.col-r{
+  padding: 20px;
+}
+
+.footer{
+  position: absolute;
+  bottom: 0;
+  background: white;
+  width: 100%;
+  text-align: center;
+}
+
+.credits{
+  color: lightgrey;
+}
