--- a/css/styles.css
+++ b/css/styles.css
@@ -4,136 +4,80 @@
   box-sizing: border-box;
 }
 
-body{
-  background-image: url("../img/natural-default-pattern.png");
-}
-
-.container{
-  width: 85%;
-  height: 95vh;
+#container{
+  width: 1000px;
   margin: auto;
-  margin-top: 20px;
-  position: relative;
 }
 
-.container::after{
-  content: "";
+.float-left{
+  float: left;
+}
+
+.mt-20{
+  margin-top: 20px;
+}
+
+.mb-20{
+  margin-bottom: 20px;
+}
+
+/* sezione header */
+header{
+  background: yellow;
+}
+
+.header-top{
+  height: 380px;
+}
+
+/* sezione navbar */
+nav{
+  width: 100%;
+  height: 44px;
+  background: #504741;
+}
+
+/* sezione main */
+
+main::after{
+  content:"";
   display: table;
   clear: both;
 }
 
-header{
-  width: 100%;
-  height: 30%;
-  background-image: url("../img/natural-default-header.jpg");
-  background-size: cover;
-  background-position: center;
-  border: 10px solid white;
-  text-align: center;
-  vertical-align: middle;
-}
-
-.logo{
-  width: 30%;
-  height: 100%;
-}
-
-nav{
-  width: 100%;
-  height: 40px;
-  background: #504741;
-  text-align: center;
-  padding: 10px;
-  border: 1px solid rgba(0,0,0,.25);
-  border-radius: 5px;
-}
-
-.menu{
-  display: inline-block;
-  color: white;
-  text-transform: uppercase;
-  padding: 5px;
-  border-right: 1px solid rgba(0,0,0,.25);
-}
-
-#contact{
-  border-right: none;
-}
-
-main{
-  margin-top: 10px;
-}
-
-.left{
-  float:left;
-}
-
-.right{
-  float:right;
-}
-
-.row-l{
+.col-left{
   width: 20%;
-  padding: 5px;
-  background: white;
+  height: 300px;
+  background: red;
+}
+
+.rounded-box{
   border-radius: 5px;
-}
-
-.link{
-  padding: 20px;
-}
-
-.row-c{
-  width: 55%;
-  background: white;
-  border-radius: 5px;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.col-c{
   padding: 5px;
 }
 
-.row-r{
+/* sezione col centrale */
+.col-center{
+  width: 50%;
+  height: 350px;
+  margin: 0 5%;
+  background: blue;
+}
+
+/* sezione col destra */
+.col-right{
   width: 20%;
 }
 
-.col-r{
-  padding: 5px;
-  background: white;
-  border-radius: 5px;
-}
-
-#top{
+.widget{
+  height: 150px;
   margin-bottom: 20px;
+  background: red;
 }
 
-#middle{
-  margin-bottom: 20px;
-}
-
-div p{
+/* sezione footer */
+footer{
+  height: 200px;
   margin-top: 20px;
-}
-
-
-.footer{
-  background: white;
-  width: 100%;
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  border-radius: 5px;
-}
-
-.credits{
-  color: lightgrey;
-}
-
-.link-social{
-  color: lightgrey;
-  height: 50px;
-  padding: 20px;
+  background: green;
 }
